option optimize_for = SPEED;
option java_package = "pipe.common";

/**
 * the accompanying information for all messages. Provides origination,
 * security, authentication, and tracking information
 */
message Header {
    required int32 node_id = 1;
    required int64 time = 2;

    // if the message is for a specific node, this will be set
    optional int32 destination = 8;

    // This factor limits the distance that a msg travels from the originating 
    // node. Default (-1) is the whole network (not restricted).
    optional int32 max_hops = 10 [default = -1];
    optional bool election = 11;
}

message Failure {
    required int32 id = 1;
    optional int32 ref_id = 2;
    optional string message = 3;
}

/* This is the general structure of the message between client and server*/

message Duty {
    optional int32 block_no = 1;
    optional int32 num_of_blocks = 2;
    optional bytes block_data = 6;
    optional string requestId = 7;
    optional bool is_global = 8;
    optional int32 dest_id = 9;
    optional int32 sender_id = 10;
    enum DutyType {
        GETFILE = 1;
        SAVEFILE = 2;
        DELETEFILE = 3;
        UPDATEFILE = 4;
    }

    optional DutyType dutyType = 3;
    required string sender = 4;
    required string filename = 5;
}
 
 