option optimize_for = SPEED;
option java_package = "routing";

import "common.proto";
import "leaderelection.proto";

message CommandMessage {
    required Header header = 1;

    oneof payload {
        // a client (external) sanity check for testing
        Duty duty = 2;
        bool ping = 3;
        string message = 4;
        StatusOfLeader leaderStatus = 5;
        Failure err = 6;
    }
}


